[workspace]
members = ["python"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Token healing implementation"
repository = "https://github.com/ModelTC/mtc-token-healing"
homepage = "https://github.com/ModelTC/mtc-token-healing"
documentation = "https://docs.rs/mtc-token-healing"
authors = ["Chielo Newctle <ChieloNewctle@gmail.com>"]

[package]
name = "mtc-token-healing"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "README.md"
exclude = ["release-plz.toml", ".github", "python"]

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "as_ref"] }
general-sam = { version = "1.0.1", features = ["trie"] }
pyo3 = { version = "0.24.0", optional = true }
smallvec = "1.14.0"
thiserror = "2.0.12"

[features]
pyo3 = ["dep:pyo3"]

[dev-dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
color-eyre = "0.6.3"
rand = "0.9.0"
regex = "1.11.1"
serde_json = "1.0.140"
tokenizers = { version = "0.21.1", features = ["hf-hub", "http"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = true
strip = true
opt-level = "z"
