[workspace]
resolver = "3"
members = ["python"]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Token healing implementation"
repository = "https://github.com/ModelTC/mtc-token-healing"
homepage = "https://github.com/ModelTC/mtc-token-healing"
documentation = "https://docs.rs/mtc-token-healing"

[workspace.dependencies]
general-sam = { version = "1.0.4", features = ["trie"] }
pyo3 = "0.29.0"

[package]
name = "mtc-token-healing"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
exclude = ["release-plz.toml", ".github", "python"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
general-sam = { workspace = true }
pyo3 = { workspace = true, optional = true }
tinyvec = { version = "1.12.0", features = ["alloc"] }

[features]
pyo3 = ["dep:pyo3"]

[profile.release]
lto = true
strip = true
