[package]
name = "mtc-token-healing-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
publish = false

[lib]
name = "mtc_token_healing"
crate-type = ["cdylib"]

[dependencies]
mtc-token-healing = { version = "0.2", path = "..", features = ["pyo3"] }
pyo3 = { version = "0.24.0", features = ["extension-module", "generate-import-lib", "abi3-py310"] }
