[project]
name = "mtc_token_healing"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = [
  "description",
  "license",
  "readme",
  "urls",
  "version",
]

[project.optional-dependencies]
tests = ["pytest"]

[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
